--- a/index.html
+++ b/index.html
@@ -9,21 +9,34 @@
 </head>
 <body>
     <header class="main">
+        <h1>Interactive Resume Builder</h1>
+        <p>Build your resume in minutes with this interactive tool.</p>
+        <nav>
+            <a href="#skills">Skills</a>
+            <a href="#experience">Resume</a>
+            <a href="#projects">Projects</a>
+            <a href="#education">Education</a>
+            <a href="#contact">Contact</a>
+        </nav>
     </header>
+    <section id="ptb" class="page-title-bar">
+        <h2></h2>
+        <h4></h4>
+    </section>
     <main class="wrapper">
-        <section class="skills">
+        <section id="skills" class="container">
             <!-- Skills content will be dynamically inserted here -->
         </section>
-        <section class="experience">
+        <section id="experience" class="container">
             <!-- Resume content will be dynamically inserted here -->
         </section>
-        <section class="projects">
+        <section id="projects" class="container">
             <!-- Projects content will be dynamically inserted here -->
         </section>
-        <section class="education">
+        <section id="education" class="container">
             <!-- Education content will be dynamically inserted here -->
         </section>
-        <section class="contact">
+        <section id="contact" class="container">
             <!-- Contact content will be dynamically inserted here -->
         </section>
         
