--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <nav>
             <a href="#skills">Skills</a>
-            <a href="#experience">Resume</a>
+            <a href="#experience">Experience</a>
             <a href="#projects">Projects</a>
             <!-- <a href="#education">Education</a>
             <a href="#contact">Contact</a> -->
